# MODIS_snow_phenology

./: .gitignore  README.md  pixi.toml  pyproject.toml
.github/workflows/: deploy-map.yml  process_batch.yml  process_single_tile.yml  summarize_results.yml
config/: config_v1.txt
interactive_map/: declarations.d.ts  next.config.js  package-lock.json  package.json  pixi.toml  test_access.ipynb
interactive_map/components/: map.tsx  sidebar.tsx
interactive_map/lib/: store.ts
interactive_map/pages/: _app.tsx  index.tsx
modis_snow_phenology/: __init__.py  config.py  processing.py
notebooks/: 01_initialize.ipynb  02_compare_with_v1.ipynb  03_create_zarr_multiscales.ipynb  tile_comparison_stats.geojson
processing/scripts/: get_tiles_for_batch.py  print_config.py  process_single_tile.py  summarize_processing.py
processing/tile_data/: tile_processing_status.geojson
